# ncursesw-rs

./: .gitignore  .ncurses  .travis.yml  CHANGELOG.md  Cargo.toml  ISSUES.md  LICENSE  README.md  TODO.md  build.rs  gh-pages  ncurses-compile  ncurses-install  ncurses-install-compile  ncurses-pc-install  wrapper.h
.cargo/: config.toml
.travis/: ncurses-install
assets/: wrapper.h
examples/: COLORS-test.rs  COLORS.rs  COLOR_PAIR-test.rs  COLOR_PAIR.rs  COLOR_PAIRS.rs  COLS.rs  ESCDELAY.rs  LINES.rs  PAIR_NUMBER.rs  TABSIZE.rs  acs-values.rs  add_wch.rs  add_wchnstr.rs  add_wchstr.rs  addch.rs  addchnstr.rs  addchstr.rs  addnstr.rs  addnwstr.rs  addstr.rs  addwstr.rs  attr_get.rs  attr_off.rs  attr_on.rs  attr_set.rs  attroff.rs  attron.rs  attrset.rs  beep.rs  bkgd.rs  bkgrnd.rs  bkgrndset.rs  border.rs  colorfull-extend.rs  colorfull-normal.rs  colorfull.rs  complex-string.rs  ex1.rs  flash.rs  get_wch-test.rs  (+73 more)
misc/: 24-bit-color  true-color-test
src/: attributescolorpairset.rs  basecolor.rs  changed.rs  characterresult.rs  cstring.rs  cursortype.rs  features.rs  funcs.rs  justification.rs  keybinding.rs  lccategory.rs  legacy.rs  lib.rs  macros.rs  ncurses.rs  ncursescolortype.rs  ncurseswerror.rs  orientation.rs  origin.rs  panels.rs  region.rs  size.rs  softlabeltype.rs  utils.rs
src/chtypet/: char.rs  mod.rs  string.rs
src/complex/: cchart.rs  char.rs  mod.rs  string.rs
src/cstring/: fromcstr.rs  mod.rs  tocstr.rs
src/extend/: attribute.rs  attributes.rs  attributescolorpair.rs  color.rs  colorpair.rs  colorpalette.rs  colors.rs  funcs.rs  mod.rs  rgb.rs
src/form/: constants.rs  fieldinfo.rs  fieldjustification.rs  fieldoption.rs  fieldoptions.rs  fieldparameters.rs  formoption.rs  formoptions.rs  formrequest.rs  funcs.rs  mod.rs  ncurseswformerror.rs
src/include/: attribute.rs  attributes.rs  attributescolorpair.rs  color.rs  colorpair.rs  colorpalette.rs  colors.rs  rgb.rs
src/menu/: constants.rs  funcs.rs  itemoption.rs  itemoptions.rs  menuoption.rs  menuoptions.rs  menurequest.rs  menusize.rs  menuspacing.rs  menuuserptr.rs  mod.rs  ncurseswmenuerror.rs
src/mouse/: constants.rs  funcs.rs  mod.rs  ncurseswmouseerror.rs  originresult.rs
src/normal/: attribute.rs  attributes.rs  attributescolorpair.rs  color.rs  colorpair.rs  colorpalette.rs  colors.rs  funcs.rs  mod.rs  rgb.rs
src/panels/: funcs.rs  mod.rs  ncurseswpanelserror.rs  panels.rs  paneluserptr.rs
src/shims/: bindings.rs  constants.rs  funcs.rs  mod.rs  ncurses.rs  nmenu.rs  nmouse.rs  npanels.rs  utils.rs
src/shims/nform/: fieldtype.rs  mod.rs  nform.rs
src/wide/: char.rs  charandattributes.rs  charresult.rs  mod.rs  string.rs
